fix dashboard tab name on mobile fix table spacing

--- a/app/static/styles/form.css
+++ b/app/static/styles/form.css
@@ -3,9 +3,9 @@ form {
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
-    padding: 3rem 0;
+    padding: 3rem 1rem;
     max-width: 400px;
-    min-width: 285px;
+    min-width: 250px;
     border-radius: 0.5rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -36,6 +36,7 @@ form div * {
 
 table {
     margin: auto;
+    border-spacing: 1rem;
 }
 
 td {
